change document swagger for json body sample value:{}
